@@ -1,3 +1,8 @@
+shmuel 06.01.2014 13:33:30 +0200 - build 266
+
+1. Кастомная сортировка:
+   адаптация "альтернативной" функции сортировки (qsort) к Far 3.0.3751+.
+
 shmuel 05.01.2014 19:22:10 +0200 - build 265
 
 1. Рефакторинг кастомной сортировки.
@@ -9,6 +14,8 @@ drkns 03.01.2014 13:38:35 +0200 - build 264
 t-rex 03.01.2014 04:58:00 +0200 - build 263
 
 1. Фикс кастомной сортировки, уродливо но чтоб намёк был понят.
+
+[ Примечание от shmuel: кастомная сортировка сломалась в Far 3.0.3751 ]
 
 shmuel 28.12.2013 13:05:44 +0200 - build 262
 
